# kalman-filter-jax

./: .gitignore  README.md  pyproject.toml
src/kalman_filter_jax/basic/: cuthbert.py  kalman_filter.py
src/kalman_filter_jax/equinox/: kalman_filter.py  params.py
src/kalman_filter_jax/lgssm/: inference.py  model.py
src/kalman_filter_jax/nnx/: gpjax_parameters_extras.py  kalman_filter.py  params.py
tests/: conftest.py
tests/basic/: test_cuthbert.py  test_kalman_filter.py
tests/equinox/: test_kalman_filter.py  test_numpyro_model.py  test_optim.py  test_params.py
tests/lgssm/: test_lgssm.py  test_numpyro_model.py  test_optim.py
tests/nnx/: test_gpjax_parameters_extras.py  test_kalman_filter.py  test_numpyro_model.py  test_optim.py  test_params.py
