[project]
name = "kalman-filter-jax"
version = "0.1.0"
description = "Trying out different jax-based libraries by implementing a Kalman filter."
readme = "README.md"
authors = [
    { name = "Theo Rashid" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.5",
    "cuthbert>=0.0.8",
    "equinox>=0.13.6",
    "gpjax==0.13.6",
    "jax>=0.9.2",
    "jaxtyping>=0.3.9",
    "lineax>=0.1.0",
    "numpyro>=0.20.1",
    "optax>=0.2.8",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D211",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "ERA001", # commented out code
    "F722",   # jaxtyping: https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
    "PLR0913",
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "N806",
    "S101",
]

[tool.ty.rules]
# cuthbert's Protocol types use ArrayTreeLike which ty can't resolve,
# producing false-positive invalid-argument-type errors.
# jax.scipy return types are unions that don't narrow to Array.
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
unresolved-attribute = "ignore"
